docs: fix storybook dark mode

--- a/.storybook/storybook-reset.css
+++ b/.storybook/storybook-reset.css
@@ -2,7 +2,7 @@ html {
   height: 100%;
 }
 
-html.dark {
+html.figma-dark {
   background-color: #2c2c2c;
 }
 
